Track images etc.

--- a/misc/presentations/MollicEpipedonThickness/MollicEpipedonThickness.html
+++ b/misc/presentations/MollicEpipedonThickness/MollicEpipedonThickness.html
@@ -22,7 +22,7 @@ class: titleSlide
   ## Mollic Thickness Requirement
   ### An investigation of representative ("RV") SSURGO component pedons 
   &lt;br&gt;&lt;br&gt;&lt;br&gt;
-  #### 2021-02-08
+  #### 2021-02-09
 ]
 
 .right[.large[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
@@ -336,8 +336,7 @@ _USDA is an equal opportunity provider, employer, and lender._
 <script>var slideshow = remark.create({
 "slideNumberFormat": "%current%",
 "highlightStyle": "github",
-"highlightLines": true,
-"self_contained": true
+"highlightLines": true
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
